[package]
name = "mist-lib"
version = "0.1.1"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Juniper Mist Schema Definitions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rruckley/mist-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"]}
serde_json = { version = "1.0.128", features = ["raw_value"]}